--- a/Index.html
+++ b/Index.html
@@ -65,9 +65,52 @@
         </div>
         <div class="row">
             <div class="col">
-                <div>
-                 Table   ------ STILL NEED TO DO THIS ONE
-                 This one needs to be scrollable horizontal on mobile
+                <div class="table-responsive-sm">
+                    <table class="table table-bordered border-secondary">
+                        <thead>
+                            <th scope="col">Service</th>
+                            <th scope="col">Description</th>
+                            <th scope="col">Rate</th>
+                            <th scope="col">QTY</th>
+                            <th scope="col">Amount</th>    
+                        </thead>
+                        <tbody>
+                            <tr class="table-secondary border-secondary">
+                                <td>Design</td>
+                                <td>Website Design</td>
+                                <td>$60.00</td>
+                                <td>10</td>
+                                <td>$600.00</td>
+                            </tr>
+                            <tr>
+                                <td>Development</td>
+                                <td>Website Development</td>
+                                <td>$150.00</td>
+                                <td>10</td>
+                                <td>$1500.00</td>
+                            </tr>
+                            <tr class="table-secondary border-secondary">
+                                <td>Deployment</td>
+                                <td>Deployment and Hosting</td>
+                                <td>$450.00</td>
+                                <td>1</td>
+                                <td>$450.00</td>
+                            </tr>
+                            <tr class="">
+                                <td colspan="4">Sub Total:</td>
+                                <td>$2550.00</td>
+                            </tr>
+                            <tr class="">
+                                <td colspan="4">Tax:</td>
+                                <td>$0.00</td>
+                            </tr>
+                            <tr class="">
+                                <td colspan="4">Total:</td>
+                                <td>$2550.00</td>
+                            </tr>
+                        </tbody>
+                    </table>
+
                 </div>
             </div>            
         </div> 
