--- a/Index.html
+++ b/Index.html
@@ -15,9 +15,9 @@
 <body>
     <div class="container border border-secondary rounded">
         <div class="row">
-            <div class="col mt-2">
+            <div class="col mt-2 d-print-none">
                 <div class="float-end  d-none d-sm-block">
-                    <button class="btn btn-dark" type="submit">Print this page</button>
+                    <button class="btn btn-dark" type="button" onclick="window.print()">Print this page</button>
                 </div>
             </div>
         </div>
